don't show scrollbars if not necessary. fixes #48

--- a/scss/emberui/eui-main.scss
+++ b/scss/emberui/eui-main.scss
@@ -1,5 +1,5 @@
 // Help prevents page scrolling on mobile when modal or poplist is open
 .ember-application > div.ember-view:first-of-type {
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
 }
